--- a/app/assets/stylesheets/themes/_space_legacy.scss
+++ b/app/assets/stylesheets/themes/_space_legacy.scss
@@ -287,7 +287,7 @@
 
   // Progress
   .progress { background-color: #1E1B3A !important; }
-  .bg-secondary-subtle { background-color: #1E1B3A !important; }
+  .bg-secondary-subtle { background-color: rgba(255, 255, 255, 0.12) !important; color: rgba(255,255,255,0.6) !important; }
 
   // Select2 Fixes
   .select2-container {
